fix: replace List.getFirst with Java 17 compatible access